; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiHelpers.c_get_microseconds64.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiHelpers.c_get_microseconds64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i32 }

@CLOCK_MONOTONIC_RAW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_microseconds64() #0 {
  %1 = alloca %struct.timespec, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @CLOCK_MONOTONIC_RAW, align 4
  %4 = call i32 @clock_gettime(i32 %3, %struct.timespec* %1)
  %5 = getelementptr inbounds %struct.timespec, %struct.timespec* %1, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = mul nsw i32 %6, 1000000
  store i32 %7, i32* %2, align 4
  %8 = getelementptr inbounds %struct.timespec, %struct.timespec* %1, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = sdiv i32 %9, 1000
  %11 = load i32, i32* %2, align 4
  %12 = add nsw i32 %11, %10
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @clock_gettime(i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
